--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 
-Diese Arbeit beschäftigt sich mit der Entwicklung einer modularen und erweiterbaren Anwendung zur medizinischen Bildverarbeitung für einen Einsatz in Forschung und Lehre im \glqq Labor für medizinische Bildverarbeitung, Algorithmen und Krankenhaus IT\grqq.\\
+Diese Arbeit beschäftigt sich mit der Entwicklung einer modularen und erweiterbaren Anwendung zur medizinischen Bildverarbeitung für den Einsatz in Forschung und Lehre im \glqq Labor für medizinische Bildverarbeitung, Algorithmen und Krankenhaus IT\grqq.\\
 Es wird eine Architektur entworfen, die eine Integration neuer Funktionen, sogenannter Module, erlaubt und eine dynamische Erweiterung des Systems zur Laufzeit zulässt. Die Basis der Software besteht aus der \glqq Eclipse Rich Client Platform\grqq\ und wird mit Hilfe gängiger Architektur- und Entwurfsmuster ergänzt, um eine flexible Anwendungsstruktur zur Verfügung zu stellen. Zur Verarbeitung der medizinischen Bilder wird der DICOM-Standard eingesetzt, damit die Bilddaten angezeigt und Manipuliert werden können. \\
-Ergebnis der Arbeit ist die Software \glqq jMediKit - Java Medical Imaging Toolkit \grqq\, die sich durch Module und Plug-ins erweitern lässt und Funktionen zur Navigation und Orientierung in dreidimensionalen medizinischen Bildern bietet. jMediKit liefert das grundlegende System, das sich sowohl von Entwicklern durch und Module, als auch Anwendern durch Plug-ins erweitern lässt.
+Ergebnis der Arbeit ist die Software \glqq jMediKit - Java Medical Imaging Toolkit \grqq\, die sich durch Module und Plug-ins erweitern lässt und Funktionen zur Navigation und Orientierung in dreidimensionalen medizinischen Bildern bietet. jMediKit liefert das grundlegende System, das sich sowohl von Entwicklern durch Module, als auch von Anwendern durch Plug-ins erweitern lässt.
 
 \end{abstract}
