--- a/literature.bib
+++ b/literature.bib
@@ -120,7 +120,23 @@
            url = "{http://www.itk.org/pipermail/insight-users/2003-September/004762.html}",
            note = "Stand 05.02.2014",
        }
+
+ @misc{slicer:screen,
+            author = "Farhat, N.",
+            title = "Tutorial Video 2014 January",
+            year = "2014",
+            url = "{http://www.slicer.org/publications/bitstream/viewbiglogo/2511/Farhat-Slicer-3D-Printing}",
+            note = "Stand 05.02.2014",
+        }
  
+ @misc{e4:screen,
+             author = "Arthorne, John",
+             title = "Eclipse SDK 4.2",
+             year = "2013",
+             url = "{https://wiki.eclipse.org/Eclipse4}",
+             note = "Stand 05.02.2014",
+         }
+         
  @BOOK{radio:hounsfield,
     AUTHOR       = "Bücheler, Egon and Lackner, Klaus-Jürgen and Thelen, Manfred",
     TITLE        = "Einführung in die Radiologie: Diagnostik und Interventionen",
